feat: add ticket snoozing
